# VOXELINK

./: .gitignore  README.md  config.json  gui.py  pipeline.html  pipeline_test.html  realtime_stt_demo.html  requirements.txt  start.bat  start.py
backend/: .env.example  .gitignore  __init__.py  config_example.json  main.py  pyproject.toml  requirements.txt
backend/GPT_SoVITS/: __init__.py  utils.py
backend/GPT_SoVITS/AR/models/: __init__.py
backend/GPT_SoVITS/TTS_infer_pack/: TTS.py  TextPreprocessor.py
backend/GPT_SoVITS/module/: models.py  models_onnx.py  modules.py
backend/GPT_SoVITS/text/: chinese2.py  cleaner.py  english.py  korean.py
backend/app/: __init__.py
backend/app/api/: __init__.py  asr.py  llm.py  system.py  vpr.py  ws.py
backend/app/config/: __init__.py  app_config.py  constant.py  default.py
backend/app/core/: __init__.py  stt_config.py  stt_security.py
backend/app/core/db/: __init__.py  db_history.py
backend/app/core/funcall/: __init__.py  function_handler.py  tool_functions.py
backend/app/core/gsvi/: .gitignore  api_server.py  app.py  config.json  core_inference.py  install.sh
backend/app/core/llm/: __init__.py  chat.py  message.py
backend/app/core/pipeline/: __init__.py  chat_process.py  function_process.py  (+2 more)
backend/app/models/: __init__.py  chat.py  response.py  user.py
backend/app/schemas/: __init__.py  response.py
backend/app/services/: __init__.py  asr_service.py  llm_service.py  vad_service.py  vpr_service.py
backend/app/utils/: __init__.py  logger.py  token_counter.py  user.py  verification_code_platform.py
(+75 files in other folders)
